# aegira

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  Makefile  PIPELINE.md  README.md  RULES-DESIGN.MD  TESTING.md  TODO.md
benches/: client_reuse.rs
configs/: aegira.toml
configs/rules/: main.toml
configs/rules/common/: 00-base.toml
configs/rules/overrides/: 99-local.toml
configs/rules/sites/: 50-api.toml
src/: config.rs  daemon.rs  engine.rs  lib.rs  main.rs  model.rs  proxy_protocol.rs  rules.rs  runtime.rs  schema.rs  tls.rs  uds.rs  version.rs
tests/: integration_runtime.rs
