[package]
name = "aegira"
version = "0.1.0"
edition = "2021"
description = "Virtual-host-aware reverse-proxy WAF scaffold"
license = "BSD-2-Clause"

[dependencies]
anyhow = "1.0"
thiserror = "1"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
axum = "0.8"
bytes = "1.10"
http = "1.3"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
rustls = "0.23"
rustls-pemfile = "2.2"
tokio = { version = "1.47", features = ["full"] }
tokio-rustls = "0.26"
rand = "0.8"
aes-gcm = "0.10"
humantime = "2.3"
arc-swap = "1"
ipnet = { version = "2", features = ["serde"] }
percent-encoding = "2"
flate2 = "1"
brotli = "7"
zstd = "0.13"
serde_json = "1"
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
jsonschema = "0.29"
tempfile = "3"
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy", "http1", "http2", "server", "server-auto"] }
tower = { version = "0.5", features = ["util"] }
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"

[dev-dependencies]
base64 = "0.22"
rcgen = "0.13"
serial_test = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "client_reuse"
harness = false
